# SynestiaOS

./: .gitignore  CMakeLists.txt
SourceCode/: tags
SourceCode/Board/RaspberryPi/include/: framebuffer.h  gpio.h  led.h  raspi.h
SourceCode/Board/RaspberryPi/src/: framebuffer.c  gpu.c  led.c  synestia_os_hal.c  uart.c
SourceCode/Kernel/Arch/: CMakeLists.txt
SourceCode/Kernel/Arch/arm/: boot.S
SourceCode/Kernel/src/: init.c
